--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>LatinLyrics Mic Drop</title>
-	<link rel="stylesheet" href="../CSS/style.css">
-	<link rel="shortcut icon" href="../IMG/Mic_Drop.jpg" type="image/x-icon">
+	<link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
+	<link rel="shortcut icon" href="{{ url_for('static', filename='IMG/Mic_Drop.jpg') }}" type="image/x-icon">
 </head>
 <body>
 
 	<main>
 		<div id="inicio">
-			<img src="../IMG/Img_1.jpg" id="img1">
-			<img src="../IMG/Img_2.jpg" id="img2">
+			<img src="{{ url_for('static', filename='IMG/Img_1.jpg') }}" id="img1">
+			<img src="{{ url_for('static', filename='IMG/Img_2.jpg') }}" id="img2">
 
-			<audio src="../BTS_MicDrop.mp3" controls loop></audio>		
+			<audio src="{{ url_for('static', filename='IMG/BTS_MicDrop.mp3') }}" controls loop></audio>		
 
 			<h1>LETRAS -MIC DROP- <br>BTS</h1>
 			<h2>Propósito del Lyrics:</h2>
@@ -143,31 +143,31 @@
 				</tr>
 				<tr>
 					<td>
-						<img src="../IMG/Mash.jpg">
-						<a href="https://bredalis.github.io/BlingBangBangBorn/HTML/index.html" target="_blank">Bling-Bang-Bang-Born</a>
+						<img src="{{ url_for('static', filename='IMG/Mash.jpg') }}">
+						<a href="https://blingbangbangborn.onrender.com" target="_blank">Bling-Bang-Bang-Born</a>
 					</td>
 					<td>Creepy Nuts</td>
 				</tr>
 				<tr>
 					<td>
-						<img src="../IMG/Toca_Toca.jpg">
+						<img src="{{ url_for('static', filename='IMG/Toca_Toca.jpg') }}">
 						<a href="https://bredalis.github.io/TocaToca/HTML/index.html" target="_blank">Toca Toca</a>
 					</td>
 					<td>Fly Project</td>
 				</tr>
 				<tr>
 					<td>
-						<img src="../IMG/Fire.jpg">
-						<a href="https://bredalis.github.io/LyricsFire/HTML/index.html" target="_blank">Fire</a>
+						<img src="{{ url_for('static', filename='IMG/Fire.jpg') }}">
+						<a href="https://lyricsfire.onrender.com" target="_blank">Fire</a>
 					</td>
 					<td>BTS</td>
 				</tr>
 			</table>
 
-			<img src="../IMG/Img_3.jpg" id="img3">
-			<img src="../IMG/Img_4.jpg" id="img4">
-			<img src="../IMG/Img_5.jpg" id="img5">
-			<img src="../IMG/Img_6.jpg" id="img6">
+			<img src="{{ url_for('static', filename='IMG/Img_3.jpg') }}" id="img3">
+			<img src="{{ url_for('static', filename='IMG/Img_4.jpg') }}" id="img4">
+			<img src="{{ url_for('static', filename='IMG/Img_5.jpg') }}" id="img5">
+			<img src="{{ url_for('static', filename='IMG/Img_6.jpg') }}" id="img6">
 		</div>
 	</main>
 
@@ -177,32 +177,32 @@
         <ul>
             <li>
             	<a href="https://github.com/Bredalis" target="_blank">
-            		<img src="../IMG/GitHub.svg" alt="GitHub" title="GitHub" height="50">
+            		<img src="{{ url_for('static', filename='IMG/GitHub.svg') }}" alt="GitHub" title="GitHub" height="50">
             	</a>
             </li>
             <li>
             	<a href="https://www.linkedin.com/in/bredalis-gautreaux/" target="_blank">
-            		<img src="../IMG/LinkedIn.svg" alt="LinkedIn" title="LinkedIn" height="50">
+            		<img src="{{ url_for('static', filename='IMG/LinkedIn.svg') }}" alt="LinkedIn" title="LinkedIn" height="50">
             	</a>
             </li>
             <li>
             	<a href="https://es.stackoverflow.com/users/293358/bredalis-gautreaux" target="_blank">
-            		<img src="../IMG/Stack_OverFlow.svg" alt="Stack OverFlow" title="Stack OverFlow" height="50">
+            		<img src="{{ url_for('static', filename='IMG/Stack_OverFlow.svg') }}" alt="Stack OverFlow" title="Stack OverFlow" height="50">
             	</a>
             </li>
             <li>
             	<a href="https://huggingface.co/chat/assistants?user=Bredalis" target="_blank">
-            		<img src="../IMG/Hugging_Face.png" alt="Hugging Face" title="Hugging Face">
+            		<img src="{{ url_for('static', filename='IMG/Hugging_Face.png') }}" alt="Hugging Face" title="Hugging Face">
             	</a>
             </li>
             <li>
             	<a href="https://x.com/Bredalis_P" target="_blank">
-            		<img src="../IMG/X.svg" alt="X" title="X" height="50">
+            		<img src="{{ url_for('static', filename='IMG/X.svg') }}" alt="X" title="X" height="50">
             	</a>
             </li>
             <li>
             	<a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">
-            		<img src="../IMG/Licencia.svg" alt="Licencia Pública General GNU v3.0" title="Licencia Pública General GNU v3.0" height="50">
+            		<img src="{{ url_for('static', filename='IMG/Licencia.svg') }}" alt="Licencia Pública General GNU v3.0" title="Licencia Pública General GNU v3.0" height="50">
             	</a>
             </li>
         </ul>
