style: 🎨 Rutas arregladas

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
 				<tr>
 					<td>
 						<img src="{{ url_for('static', filename='IMG/Toca_Toca.jpg') }}">
-						<a href="https://bredalis.github.io/TocaToca/HTML/index.html" target="_blank">Toca Toca</a>
+						<a href="https://tocatoca.onrender.com" target="_blank">Toca Toca</a>
 					</td>
 					<td>Fly Project</td>
 				</tr>
