refactor: 🌳 Programas refactorizados

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,132 +8,128 @@
 	<link rel="shortcut icon" href="{{ url_for('static', filename='IMG/Mic_Drop.jpg') }}" type="image/x-icon">
 </head>
 <body>
+	<header id="inicio">
+		<img src="{{ url_for('static', filename='IMG/Img_1.jpg') }}" id="img1">
+		<img src="{{ url_for('static', filename='IMG/Img_2.jpg') }}" id="img2">
+		<audio src="{{ url_for('static', filename='IMG/BTS_MicDrop.mp3') }}" controls loop></audio>		
+
+		<h1>LETRAS -MIC DROP- <br>BTS</h1>
+		<h2>Propósito del Lyrics:</h2>
+		<p>
+			Principalmente que se diviertan y puedan cantar la canción de este gran anime. Y claro que pueden saber qué significan, es decir, contribuir y facilitar a la comunidad latinoamericana.
+		</p>
+	</header>
 
 	<main>
-		<div id="inicio">
-			<img src="{{ url_for('static', filename='IMG/Img_1.jpg') }}" id="img1">
-			<img src="{{ url_for('static', filename='IMG/Img_2.jpg') }}" id="img2">
-
-			<audio src="{{ url_for('static', filename='IMG/BTS_MicDrop.mp3') }}" controls loop></audio>		
-
-			<h1>LETRAS -MIC DROP- <br>BTS</h1>
-			<h2>Propósito del Lyrics:</h2>
-			<p>
-				Principalmente que se diviertan y puedan cantar la canción de este gran anime. Y claro que pueden saber qué significan, es decir, contribuir y facilitar a la comunidad latinoamericana.
-			</p>
-		</div>
 		<div id="cuerpo">
-			
 			<h2>Letras</h2>
 			<h3>[Verso 1: j-hope]</h3>
-
+			
 			<p>
-				Sí, ¿quién dijo que mi cuchara está sucia? <br>
-				No me importa, cuando agarro el micro, tengo varias cucharas de oro. <br>
-				Varios filetes crudos allí me hacen enojar. <br>
-				Una vez más, los masticaré a todos, en la noche de las estrellas <br>
-				Centro de negocios mundiales <br>
-				Primero en la lista de reclutamiento, agotado <br>
-				Esta clase no es común, disfruta de este valor. <br>
+				Sí, ¿quién dijo que mi cuchara está sucia?<br>
+				No me importa, cuando agarro el micro, tengo varias cucharas de oro.<br>
+				Varios filetes crudos allí me hacen enojar.<br>
+				Una vez más, los masticaré a todos, en la noche de las estrellas<br>
+				Centro de negocios mundiales<br>
+				Primero en la lista de reclutamiento, agotado<br>
+				Esta clase no es común, disfruta de este valor.<br>
 				Los malos olores con buenos aromas van contra las reglas
 				Cuerda elástica para micrófono
 			</p>		
 			<h3>[Verso 2: SUGA]</h3>
 			<p>
-				Cuerda elástica para micrófono <br>
-				Luces brillantes, avanzando <br>
-				Pensaste que iba a fallar pero estoy bien, lo siento <br>
-				Lo siento, "cartelera" <br>
-				Lo siento, "en todo el mundo" <br>
-				Lo siento mamá, tu hijo es demasiado sexy. <br>
-				Estoy siendo un buen hijo en tu lugar. <br>
-				Sin contras en nuestros conciertos. <br>
-				Lo hago, lo hago, eres un pisto de mal gusto <br>
-				Si estas celoso demandame <br>
+				Cuerda elástica para micrófono<br>
+				Luces brillantes, avanzando<br>
+				Pensaste que iba a fallar pero estoy bien, lo siento<br>
+				Lo siento, "cartelera"<br>
+				Lo siento, "en todo el mundo"<br>
+				Lo siento mamá, tu hijo es demasiado sexy.<br>
+				Estoy siendo un buen hijo en tu lugar.<br>
+				Sin contras en nuestros conciertos.<br>
+				Lo hago, lo hago, eres un pisto de mal gusto<br>
+				Si estas celoso demandame<br>
 				demandarlo	
-			</p>	
-
+			</p>
 			<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
 			<p>
-				¿Viste mi bolso? ¿Viste mi bolso? <br>
-				Mi bolso está lleno de trofeos. <br>
-				¿Qué opinas de eso? ¿Qué opinas de eso? <br>
-				Los haters ya se están rindiendo <br>
-				Mi éxito ya es tan dorado. <br>
-				Estoy tan disparando como un portador de la antorcha <br>
-				Te apresuras a huir <br>
+				¿Viste mi bolso? ¿Viste mi bolso?<br>
+				Mi bolso está lleno de trofeos.<br>
+				¿Qué opinas de eso? ¿Qué opinas de eso?<br>
+				Los haters ya se están rindiendo<br>
+				Mi éxito ya es tan dorado.<br>
+				Estoy tan disparando como un portador de la antorcha<br>
+				Te apresuras a huir<br>
 				¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
 			</p>		
 			<h3>[Estribillo: Jung Kook, RM, SUGA, Jimin, j-hope]</h3>
 			<p>
-				Tantos trofeos en mis manos <br>
-				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
-				Caída de micrófono, caída de micrófono <br>
-				Cuidado con tus pies, cuidado con lo que dices <br>
-				Lodi dodi, estoy tan ocupado <br>
-				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
-				Caída de micrófono, caída de micrófono <br>
+				Tantos trofeos en mis manos<br>
+				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!)<br>
+				Caída de micrófono, caída de micrófono<br>
+				Cuidado con tus pies, cuidado con lo que dices<br>
+				Lodi dodi, estoy tan ocupado<br>
+				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!)<br>
+				Caída de micrófono, caída de micrófono<br>
 				Cuidado con tus pies, cuidado con lo que dices
 			</p>		
 			<h3>[Verso 3: RM]</h3>
 			<p>
-				Este es el dicho exacto. <br>
-				La derecha prevalecerá al final <br>
-				Érase una vez <br>
-				Las fábulas de Esopo vuelan <br>
-				Mira tu realidad, que pena. <br>
-				Incluso si muero ahora, estoy muy feliz (súbelo) <br>
-				¿A qué país vamos esta vez? (Oh) <br>
-				Pasar horas en un avión (Oye) <br>
-				Sí, estoy en la montaña, sí, estoy en la bahía (Bahía) <br>
+				Este es el dicho exacto.<br>
+				La derecha prevalecerá al final<br>
+				Érase una vez<br>
+				Las fábulas de Esopo vuelan<br>
+				Mira tu realidad, que pena.<br>
+				Incluso si muero ahora, estoy muy feliz (súbelo)<br>
+				¿A qué país vamos esta vez? (Oh)<br>
+				Pasar horas en un avión (Oye)<br>
+				Sí, estoy en la montaña, sí, estoy en la bahía (Bahía)<br>
 				Agotamiento total en el escenario, MIC Drop baam
 			</p>
 			<h3>[Pre-Estribillo: V, j-hope, Jin, Jimin]</h3>
 			<p>
-				¿Viste mi bolso? ¿Viste mi bolso? <br>
-				Mi bolso está lleno de trofeos. <br>
-				¿Qué opinas de eso? ¿Qué opinas de eso? <br>
-				Los haters ya se están rindiendo <br>
-				Mi éxito ya es tan dorado. <br>
-				Estoy tan disparando como un portador de la antorcha <br>
-				Te apresuras a huir <br>
+				¿Viste mi bolso? ¿Viste mi bolso?<br>
+				Mi bolso está lleno de trofeos.<br>
+				¿Qué opinas de eso? ¿Qué opinas de eso?<br>
+				Los haters ya se están rindiendo<br>
+				Mi éxito ya es tan dorado.<br>
+				Estoy tan disparando como un portador de la antorcha<br>
+				Te apresuras a huir<br>
 				¿Cómo te atreves? ¿Cómo te atreves? ¿Cómo te atreves?
 			</p>			
 			<h3>[Estribillo: V, RM, SUGA, Jung Kook, j-hope]</h3>
 			<p>
-				Tantos trofeos en mis manos <br>
-				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!) <br>
-				Caída de micrófono, caída de micrófono <br>
-				Cuidado con tus pies, cuidado con lo que dices <br>
-				Lodi dodi, estoy tan ocupado <br>
-				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!) <br>
-				Caída de micrófono, caída de micrófono <br>
+				Tantos trofeos en mis manos<br>
+				Demasiado pesado, mis manos no son suficientes (¡súbelo ahora!)<br>
+				Caída de micrófono, caída de micrófono<br>
+				Cuidado con tus pies, cuidado con lo que dices<br>
+				Lodi dodi, estoy tan ocupado<br>
+				Demasiado ocupado, mi único cuerpo no es suficiente (¡súbelo ahora!)<br>
+				Caída de micrófono, caída de micrófono<br>
 				Cuidado con tus pies, cuidado con lo que dices
 			</p>				
 			<h3>[Interludio: RM]</h3>
 			<p>
-				Los que odian van a odiar <br>
-				Los jugadores van a jugar. <br>
-				Vive una vida, hombre <br>
+				Los que odian van a odiar<br>
+				Los jugadores van a jugar.<br>
+				Vive una vida, hombre<br>
 				Buena suerte
 			</p>		
 			<h3>[Puente: Jin, V, Jung Kook]</h3>
 			<p>
-				No hace falta que nos volvamos a ver, este es mi último adiós. <br>
-				No queda nada más que decir, ni siquiera te disculpes. <br>
-				No hace falta que nos volvamos a ver, este es mi último adiós. <br>
+				No hace falta que nos volvamos a ver, este es mi último adiós.<br>
+				No queda nada más que decir, ni siquiera te disculpes.<br>
+				No hace falta que nos volvamos a ver, este es mi último adiós.<br>
 				No queda nada más que decir, ni siquiera te disculpes.
 			</p>
 			<h3>[Acabado: Jimin, Jung Kook y Jimin]</h3>
 			<p>
-				Mira de cerca, mira tu patético yo. <br>
-				Nos disparamos como Coca-Cola <br>
-				Tus córneas estarán tan impactadas <br>
+				Mira de cerca, mira tu patético yo.<br>
+				Nos disparamos como Coca-Cola<br>
+				Tus córneas estarán tan impactadas<br>
 				Porque somos tan geniales
 			</p>
 		</div>
 		<div id="final">
-
 			<h2>Te podrían interesar estos:</h2>
 
 			<table>
@@ -207,7 +203,7 @@
             </li>
         </ul>
 
-        <p>© 2024 LatinLyrics <br> Todos los derechos reservados</p>
+        <p>© 2024 LatinLyrics<br>Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
